Deposit and withdrawal functionality updated

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <div class="input-group">
                 <input type="text" class="form-control" placeholder="Username" id="name">
                 <input type="text" class="form-control" placeholder="Account Type" id="accountType">
-                <input type="text" class="form-control" placeholder="Account Bal" id="accountBal">
+                <input type="number" class="form-control" placeholder="Account Bal" id="accountBal">
                 <button type="button" class="btn btn-primary" onclick="helper.addBankCustomer()" id="addNewCustomerButton">SUBMIT</button>
             </div>
             <!-- <input id="firstName" type="text" placeholder="FirstName"> -->
